[package]
name = "sfio-promise"
description = "Helper types and functions for making oo-bindgen future interfaces drop-safe"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/stepfunc/promise"
repository = "https://github.com/stepfunc/promise"

[dependencies]
